--- a/src/Components/CardProducto/Card.css
+++ b/src/Components/CardProducto/Card.css
@@ -29,7 +29,7 @@
 }
 .imagenProducto {
   width: 200px;
-  height: 200px;
+  aspect-ratio: 1/1;
   border-top-left-radius: 10px;
   border-top-right-radius: 10px;
 }
