--- a/src/Components/DetailCard/DetailCard.css
+++ b/src/Components/DetailCard/DetailCard.css
@@ -14,9 +14,15 @@
   border-top-left-radius: 10px;
   border-bottom-left-radius: 10px;
 }
+.errorMessage {
+  color: red;
+}
 .divSelector {
   display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
   gap: 10px;
+  margin: 0 auto;
   margin-top: 20px;
   align-items: center;
 }
@@ -94,16 +100,17 @@
 .precioProducto {
   margin-top: 10px;
 }
-@media (1024px <= width) {
+@media (min-width: 1024px) {
   .detailCardDiv {
-    width: 40%;
+    width: 60%;
   }
   .imagenDetalleProducto {
     width: 300px;
     height: 300px;
   }
 }
-@media (768px <= width <= 1023px) {
+
+@media (min-width: 768px) and (max-width: 1023px) {
   .detailCardDiv {
     width: 70%;
   }
@@ -122,7 +129,8 @@
     padding: 10px;
   }
 }
-@media (768px > width) {
+
+@media (max-width: 767px) {
   .detailCardDiv {
     width: min-content;
     flex-direction: column;
