--- a/src/Views/HomePage/Home.css
+++ b/src/Views/HomePage/Home.css
@@ -1,32 +1,17 @@
 .mainHome {
   background-color: #efefef;
   height: max-content;
+  padding-top: 100px;
   padding-bottom: 200px;
   width: 100%;
-}
-.divBanner {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  background-image: url("../../assets/3d-abstract-space-sky-with-stars-nebula.webp");
-  background-size: cover;
-  width: 100%;
-  height: 300px;
-  margin-bottom: 100px;
-}
-.bannerInicio {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  margin: 0 auto;
 }
 .nuestrosProductosTitulo {
   text-align: center;
   margin-bottom: 20px;
 }
 @media (width <= 1023px) {
-  .divBanner {
-    display: none !important;
+  .mainHome {
+    padding-top: 40px;
   }
 }
 @media (width <= 768px) {
