--- a/src/Views/DetailsPage/Details.css
+++ b/src/Views/DetailsPage/Details.css
@@ -1,6 +1,6 @@
-.mainDetalles {
+.mainDetallesPage {
   background-color: #efefef;
-  height: 100%;
+  height: calc(100vh - 400px);
   width: 100%;
   padding-top: 100px;
   padding-bottom: 150px !important;
@@ -9,13 +9,13 @@
   display: none;
 }
 @media (768px >= width) {
-  .mainDetalles {
+  .mainDetallesPage {
     padding-top: 40px;
     padding-bottom: 40px;
   }
 }
 @media (768px < width) {
-  .mainDetalles {
+  .mainDetallesPage {
     padding-top: 100px;
     padding-bottom: 100px;
   }
