--- a/src/Views/DetailsPage/Details.css
+++ b/src/Views/DetailsPage/Details.css
@@ -1,17 +1,16 @@
 .mainDetallesPage {
   background-color: #efefef;
-  height: calc(100vh - 400px);
+  height: calc(100vh - 300px);
   width: 100%;
   padding-top: 100px;
-  padding-bottom: 150px !important;
+  padding-bottom: 100px;
 }
 .botonWhatsapp {
   display: none;
 }
 @media (768px >= width) {
   .mainDetallesPage {
-    padding-top: 40px;
-    padding-bottom: 40px;
+    height: 100vh;
   }
 }
 @media (768px < width) {
